--- a/Src/Sample/Sample.CommandService/Sample.CommandService.csproj
+++ b/Src/Sample/Sample.CommandService/Sample.CommandService.csproj
@@ -318,13 +318,13 @@
       <Project>{6554cd55-20a4-4200-9c70-e14d61f2b30a}</Project>
       <Name>IFramework.SingleSignOn</Name>
     </ProjectReference>
+    <ProjectReference Include="..\..\iFramework.Plugins\IFramework.Unity\IFramework.Unity.csproj">
+      <Project>{57f61e21-4d31-4ce0-9dfb-7be6a113654a}</Project>
+      <Name>IFramework.Unity</Name>
+    </ProjectReference>
     <ProjectReference Include="..\..\iFramework.Plugins\IFramework.WebApi\IFramework.AspNet.csproj">
       <Project>{bafca280-6b58-44e8-b0e7-ed6f51c0eaec}</Project>
       <Name>IFramework.AspNet</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\..\IFramework.Unity\IFramework.Unity.csproj">
-      <Project>{57f61e21-4d31-4ce0-9dfb-7be6a113654a}</Project>
-      <Name>IFramework.Unity</Name>
     </ProjectReference>
     <ProjectReference Include="..\..\iFramework\IFramework4.5.1.csproj">
       <Project>{0b36292c-8849-441d-8fb8-a053d43a8e72}</Project>
