fix packages referecne path for IFramework.Unity

--- a/Src/Sample/Sample.CommandServiceTests/App.config
+++ b/Src/Sample/Sample.CommandServiceTests/App.config
@@ -1,77 +1,77 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
-    <section name="unity" type="Microsoft.Practices.Unity.Configuration.UnityConfigurationSection, Microsoft.Practices.Unity.Configuration"/>
+    <section name="unity" type="Microsoft.Practices.Unity.Configuration.UnityConfigurationSection, Microsoft.Practices.Unity.Configuration" />
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
   </configSections>
   <connectionStrings>
     <!--<add name="SampleModelContext" providerName="System.Data.SqlClient" connectionString="Server=.;Database=SampleModelContext;User ID=sa;password=zhj777"/>-->
-    <add name="SampleModelContext" providerName="System.Data.SqlClient" connectionString="Server=(localdb)\projects;Database=SampleModelContext;Integrated Security=true;"/>
+    <add name="SampleModelContext" providerName="System.Data.SqlClient" connectionString="Server=(localdb)\projects;Database=SampleModelContext;Integrated Security=true;" />
     <!--<add name="MessageStore" providerName="System.Data.SqlClient" connectionString="Server=.\sqlexpress;Database=SampleMessageStore;Integrated Security=true;" />-->
   </connectionStrings>
   <unity xmlns="http://schemas.microsoft.com/practices/2010/unity">
-    <alias alias="IMessageConsumer" type="IFramework.Message.IMessageConsumer, IFramework"/>
-    <alias alias="EventSubscriber" type="IFramework.Event.Impl.EventSubscriber, IFramework"/>
-    <alias alias="IMessagePublisher" type="IFramework.Message.IMessagePublisher, IFramework"/>
-    <alias alias="MessagePublisher" type="IFramework.Message.Impl.MessagePublisher, IFramework"/>
-    <alias alias="IMessageQueueClient" type="IFramework.MessageQueue.IMessageQueueClient, IFramework"/>
-    <alias alias="ServiceBusClient" type="IFramework.MessageQueue.ServiceBus.ServiceBusClient, IFramework.MessageQueue.ServiceBus"/>
-    <alias alias="KafkaClient" type="IFramework.MessageQueue.MSKafka.KafkaClient, IFramework.MessageQueue.MSKafka"/>
-    <alias alias="ILinearCommandManager" type="IFramework.Command.ILinearCommandManager, IFramework"/>
-    <alias alias="LinearCommandManager" type="Sample.Command.LinearCommandManager, Sample.Command"/>
-    <alias alias="ICommandBus" type="IFramework.Command.ICommandBus, IFramework"/>
-    <alias alias="CommandBus" type="IFramework.Command.Impl.CommandBus, IFramework"/>
-    <alias alias="ICommandHandlerProvider" type="IFramework.Command.ICommandHandlerProvider, IFramework"/>
-    <alias alias="CommandHandlerProvider" type="IFramework.Command.Impl.CommandHandlerProvider, IFramework"/>
-    <alias alias="IHandlerProvider" type="IFramework.Message.IHandlerProvider, IFramework"/>
-    <alias alias="IEventSubscriberProvider" type="IFramework.Event.IEventSubscriberProvider, IFramework"/>
-    <alias alias="EventSubscriberProvider" type="IFramework.Event.Impl.EventSubscriberProvider, IFramework"/>
-    <alias alias="IUnitOfWork" type="IFramework.UnitOfWork.IUnitOfWork, IFramework"/>
-    <alias alias="UnitOfWork" type="IFramework.EntityFramework.UnitOfWork, IFramework.EntityFramework"/>
-    <alias alias="IEventBus" type="IFramework.Event.IEventBus, IFramework"/>
-    <alias alias="EventBus" type="IFramework.Event.Impl.EventBus, IFramework"/>
-    <alias alias="IMessageStore" type="IFramework.Message.IMessageStore, IFramework"/>
-    <alias alias="MessageStore" type="IFramework.MessageStoring.MessageStore, IFramework.MessageStoring.EntityFramework"/>
-    <alias alias="SampleModelContext" type="Sample.Persistence.SampleModelContext, Sample.Persistence"/>
-    <alias alias="RepositoryImpl" type="IFramework.EntityFramework.Repositories.Repository`1,  IFramework.EntityFramework"/>
+    <alias alias="IMessageConsumer" type="IFramework.Message.IMessageConsumer, IFramework" />
+    <alias alias="EventSubscriber" type="IFramework.Event.Impl.EventSubscriber, IFramework" />
+    <alias alias="IMessagePublisher" type="IFramework.Message.IMessagePublisher, IFramework" />
+    <alias alias="MessagePublisher" type="IFramework.Message.Impl.MessagePublisher, IFramework" />
+    <alias alias="IMessageQueueClient" type="IFramework.MessageQueue.IMessageQueueClient, IFramework" />
+    <alias alias="ServiceBusClient" type="IFramework.MessageQueue.ServiceBus.ServiceBusClient, IFramework.MessageQueue.ServiceBus" />
+    <alias alias="KafkaClient" type="IFramework.MessageQueue.MSKafka.KafkaClient, IFramework.MessageQueue.MSKafka" />
+    <alias alias="ILinearCommandManager" type="IFramework.Command.ILinearCommandManager, IFramework" />
+    <alias alias="LinearCommandManager" type="Sample.Command.LinearCommandManager, Sample.Command" />
+    <alias alias="ICommandBus" type="IFramework.Command.ICommandBus, IFramework" />
+    <alias alias="CommandBus" type="IFramework.Command.Impl.CommandBus, IFramework" />
+    <alias alias="ICommandHandlerProvider" type="IFramework.Command.ICommandHandlerProvider, IFramework" />
+    <alias alias="CommandHandlerProvider" type="IFramework.Command.Impl.CommandHandlerProvider, IFramework" />
+    <alias alias="IHandlerProvider" type="IFramework.Message.IHandlerProvider, IFramework" />
+    <alias alias="IEventSubscriberProvider" type="IFramework.Event.IEventSubscriberProvider, IFramework" />
+    <alias alias="EventSubscriberProvider" type="IFramework.Event.Impl.EventSubscriberProvider, IFramework" />
+    <alias alias="IUnitOfWork" type="IFramework.UnitOfWork.IUnitOfWork, IFramework" />
+    <alias alias="UnitOfWork" type="IFramework.EntityFramework.UnitOfWork, IFramework.EntityFramework" />
+    <alias alias="IEventBus" type="IFramework.Event.IEventBus, IFramework" />
+    <alias alias="EventBus" type="IFramework.Event.Impl.EventBus, IFramework" />
+    <alias alias="IMessageStore" type="IFramework.Message.IMessageStore, IFramework" />
+    <alias alias="MessageStore" type="IFramework.MessageStoring.MessageStore, IFramework.MessageStoring.EntityFramework" />
+    <alias alias="SampleModelContext" type="Sample.Persistence.SampleModelContext, Sample.Persistence" />
+    <alias alias="RepositoryImpl" type="IFramework.EntityFramework.Repositories.Repository`1,  IFramework.EntityFramework" />
     <!--<alias alias="IMessageContext" type="IFramework.Message.IMessageContext, IFramework" ></alias>
     <alias alias="MessageContext" type="IFramework.MessageQueue.ServiceBus.MessageFormat.MessageContext, IFramework.MessageQueue.ServiceBus" ></alias>-->
     <container>
       <register type="IUnitOfWork" mapTo="UnitOfWork">
-        <lifetime type="hierarchical"/>
+        <lifetime type="hierarchical" />
       </register>
-      <register type="IFramework.Repositories.IDomainRepository, IFramework" mapTo="IFramework.EntityFramework.Repositories.DomainRepository, IFramework.EntityFramework"/>
-      <register type="IFramework.Repositories.IRepository`1, IFramework" mapTo="RepositoryImpl"/>
+      <register type="IFramework.Repositories.IDomainRepository, IFramework" mapTo="IFramework.EntityFramework.Repositories.DomainRepository, IFramework.EntityFramework" />
+      <register type="IFramework.Repositories.IRepository`1, IFramework" mapTo="RepositoryImpl" />
       <register type="SampleModelContext" mapTo="SampleModelContext">
-        <lifetime type="hierarchical"/>
+        <lifetime type="hierarchical" />
       </register>
       <register type="ILinearCommandManager" mapTo="LinearCommandManager">
-        <lifetime type="singleton"/>
+        <lifetime type="singleton" />
       </register>
       <register type="ICommandBus" mapTo="CommandBus">
-        <lifetime type="singleton"/>
+        <lifetime type="singleton" />
         <constructor>
           <param name="messageQueueClient" dependencyType="IMessageQueueClient"></param>
-          <param name="linearCommandManager" dependencyType="LinearCommandManager"/>
-          <param name="replyTopicName" value="replyTopicTest"/>
-          <param name="replySubscriptionName" value="replySubscription"/>
+          <param name="linearCommandManager" dependencyType="LinearCommandManager" />
+          <param name="replyTopicName" value="replyTopicTest" />
+          <param name="replySubscriptionName" value="replySubscription" />
           <param name="needMessageStore" value="false"></param>
         </constructor>
       </register>
       <register type="IEventSubscriberProvider" mapTo="EventSubscriberProvider">
-        <lifetime type="singleton"/>
+        <lifetime type="singleton" />
         <constructor>
           <param name="assemblies">
             <array>
-              <value value="DomainEventSubscriber"/>
+              <value value="DomainEventSubscriber" />
             </array>
           </param>
         </constructor>
       </register>
       <register type="IEventBus" mapTo="EventBus">
-        <lifetime type="hierarchical"/>
+        <lifetime type="hierarchical" />
       </register>
-      <instance name="serviceBusConnectionString" value="Endpoint=sb://dev.r-soft.cn/ServiceBusDefaultNamespace;StsEndpoint=https://dev.r-soft.cn:1552/ServiceBusDefaultNamespace;RuntimePort=1553;ManagementPort=1552;OAuthUsername=ivan;OAuthPassword=DevPassword01!"/>
+      <instance name="serviceBusConnectionString" value="Endpoint=sb://dev.r-soft.cn/ServiceBusDefaultNamespace;StsEndpoint=https://dev.r-soft.cn:1552/ServiceBusDefaultNamespace;RuntimePort=1553;ManagementPort=1552;OAuthUsername=ivan;OAuthPassword=DevPassword01!" />
       <!--<instance name="serviceBusConnectionString" value="Endpoint=sb://iframework.servicebus.chinacloudapi.cn/;StsEndpoint=https://iframework-sb.accesscontrol.chinacloudapi.cn/;SharedSecretIssuer=owner;SharedSecretValue=DfDIfwLDgVK4Ujx0iDmuUAFxYIkX+iFSnQFqw5BtpSw=" />-->
       <!--<register type="IMessageQueueClient" mapTo="ServiceBusClient">
         <constructor>
@@ -80,7 +80,7 @@
       </register> -->
       <register type="IMessageQueueClient" mapTo="KafkaClient">
         <constructor>
-          <param name="zkConnectionString" value="192.168.99.60:2181"/>
+          <param name="zkConnectionString" value="192.168.99.60:2181" />
         </constructor>
       </register>
     </container>
@@ -92,28 +92,28 @@
 
       <dependentAssembly>
 
-        <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral"/>
+        <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
 
-        <bindingRedirect oldVersion="0.0.0.0-9.0.0.0" newVersion="9.0.0.0"/>
+        <bindingRedirect oldVersion="0.0.0.0-9.0.0.0" newVersion="9.0.0.0" />
 
       </dependentAssembly>
       <dependentAssembly>
-        <assemblyIdentity name="log4net" publicKeyToken="681549d62126b7b8" culture="neutral"/>
-        <bindingRedirect oldVersion="0.0.0.0-1.2.15.0" newVersion="1.2.15.0"/>
+        <assemblyIdentity name="log4net" publicKeyToken="681549d62126b7b8" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-1.2.15.0" newVersion="1.2.15.0" />
       </dependentAssembly>
       <dependentAssembly>
-        <assemblyIdentity name="log4net" publicKeyToken="1b44e1d426115821"/>
-        <codeBase version="1.2.10.0" href="log4netv1.2.10.0\log4net.dll"/>
+        <assemblyIdentity name="log4net" publicKeyToken="1b44e1d426115821" />
+        <codeBase version="1.2.10.0" href="log4netv1.2.10.0\log4net.dll" />
       </dependentAssembly>
       <dependentAssembly>
 
-        <assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35" culture="neutral"/>
+        <assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35" culture="neutral" />
 
-        <bindingRedirect oldVersion="0.0.0.0-5.2.3.0" newVersion="5.2.3.0"/>
+        <bindingRedirect oldVersion="0.0.0.0-5.2.3.0" newVersion="5.2.3.0" />
 
       </dependentAssembly>
 
     </assemblyBinding>
 
   </runtime>
-<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.1"/></startup></configuration>
+<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.1" /></startup></configuration>
