--- a/Src/iFramework/IFramework4.5.1.csproj
+++ b/Src/iFramework/IFramework4.5.1.csproj
@@ -64,6 +64,7 @@
     <Compile Include="IoC\Lifetime.cs" />
     <Compile Include="IoC\Parameter.cs" />
     <Compile Include="MessageQueue\Configuration.cs" />
+    <Compile Include="MessageQueue\MessageQueueFactory.cs" />
     <Compile Include="Message\Impl\SlidingDoor.cs" />
     <Compile Include="Message\ISlidingDoor.cs" />
     <Compile Include="Message\MessageResponse.cs" />
