improve kafka consumer

--- a/Src/Sample/Sample.CommandService/Web.config
+++ b/Src/Sample/Sample.CommandService/Web.config
@@ -73,7 +73,7 @@
         <constructor>
           <param name="messageQueueClient" dependencyType="IMessageQueueClient" />
           <param name="linearCommandManager" dependencyType="LinearCommandManager" />
-          <param name="replyTopicName" value="replyTopic" />
+          <param name="replyTopicName" value="reply" />
           <param name="replySubscriptionName" value="replySubscription" />
           <param name="needMessageStore" value="true" />
         </constructor>
@@ -121,7 +121,8 @@
           <param name="commandBus" dependencyType="ICommandBus" />
           <param name="messagePublisher" dependencyType="IMessagePublisher" />
           <param name="subscriptionName" value="eventSubscriber" />
-          <param name="topic" value="DomainEventTopic" />
+          <param name="topic" value="DomainEvent" />
+          <param name="partition" value="0" />
         </constructor>
       </register>
       <register name="ApplicationEventProvider" type="IHandlerProvider" mapTo="EventSubscriberProvider">
@@ -141,7 +142,8 @@
           <param name="commandBus" dependencyType="ICommandBus" />
           <param name="messagePublisher" dependencyType="IMessagePublisher" />
           <param name="subscriptionName" value="appEventSubscriber" />
-          <param name="topic" value="AppEventTopic" />
+          <param name="topic" value="AppEvent" />
+          <param name="partition" value="0" />
         </constructor>
       </register>
       <!--<instance name="serviceBusConnectionString" value="Endpoint=sb://dev.r-soft.cn/ServiceBusDefaultNamespace;StsEndpoint=https://dev.r-soft.cn:1552/ServiceBusDefaultNamespace;RuntimePort=1553;ManagementPort=1552;OAuthUsername=ivan;OAuthPassword=DevPassword01!" />-->
