--- a/Src/iFramework.Plugins/IFramework.MessageQueue.Kafka/IFramework.MessageQueue.MSKafka.csproj
+++ b/Src/iFramework.Plugins/IFramework.MessageQueue.Kafka/IFramework.MessageQueue.MSKafka.csproj
@@ -59,10 +59,12 @@
   <ItemGroup>
     <Compile Include="Config\FrameworkConfigurationExtension.cs" />
     <Compile Include="KafkaClient.cs" />
+    <Compile Include="KafkaConsumer.cs" />
     <Compile Include="MessageFormat\KafkaPayload.cs" />
     <Compile Include="MessageFormat\MessageContext.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="QueueClient.cs" />
+    <Compile Include="QueueConsumer.cs" />
     <Compile Include="SubscriptionClient.cs" />
     <Compile Include="TopicClient.cs" />
   </ItemGroup>
