add needMessageStore config in messagesender

--- a/Src/Sample/Sample.CommandService/Web.config
+++ b/Src/Sample/Sample.CommandService/Web.config
@@ -163,6 +163,7 @@
         <constructor>
           <param name="messageQueueClient" dependencyType="IMessageQueueClient" />
           <param name="defaultTopic" value="messageTopic" />
+          <param name="needMessageStore" value="true" />
         </constructor>
       </register>
       <register type="IEventBus" mapTo="EventBus">
