use kafka group consumer

--- a/Src/Sample/Sample.CommandService/Web.config
+++ b/Src/Sample/Sample.CommandService/Web.config
@@ -25,9 +25,9 @@
     <add name="SampleModelContext" providerName="System.Data.SqlClient" connectionString="Server=(localdb)\projects;Database=SampleModelContext;Integrated Security=true;" />
     <!--<add name="MessageStore" providerName="System.Data.SqlClient" connectionString="Server=.\sqlexpress;Database=SampleMessageStore;Integrated Security=true;" />-->
   </connectionStrings>
-  <unity xmlns="http://schemas.microsoft.com/practices/2010/unity">
-    <!--<alias alias="hierarchical" type="IFramework.Infrastructure.Unity.LifetimeManagers.hierarchicalLifetimeManager, IFramework" />-->
-    <!--<alias alias="permessagecontext" type="IFramework.Infrastructure.Unity.LifetimeManagers.PerMessageContextLifetimeManager, IFramework" />-->
+  <!--<unity xmlns="http://schemas.microsoft.com/practices/2010/unity">
+    --><!--<alias alias="hierarchical" type="IFramework.Infrastructure.Unity.LifetimeManagers.hierarchicalLifetimeManager, IFramework" />--><!--
+    --><!--<alias alias="permessagecontext" type="IFramework.Infrastructure.Unity.LifetimeManagers.PerMessageContextLifetimeManager, IFramework" />--><!--
     <alias alias="IMessageConsumer" type="IFramework.Message.IMessageConsumer, IFramework" />
     <alias alias="EventSubscriber" type="IFramework.Event.Impl.EventSubscriber, IFramework" />
     <alias alias="IMessagePublisher" type="IFramework.Message.IMessagePublisher, IFramework" />
@@ -52,19 +52,19 @@
     <alias alias="MessageStore" type="IFramework.MessageStoring.MessageStore, IFramework.MessageStoring.EntityFramework" />
     <alias alias="SampleModelContext" type="Sample.Persistence.SampleModelContext, Sample.Persistence" />
     <alias alias="RepositoryImpl" type="IFramework.EntityFramework.Repositories.Repository`1,  IFramework.EntityFramework" />
-    <!--<alias alias="IMessageContext" type="IFramework.Message.IMessageContext, IFramework" ></alias>
-    <alias alias="MessageContext" type="IFramework.MessageQueue.ServiceBus.MessageFormat.MessageContext, IFramework.MessageQueue.ServiceBus" ></alias>-->
+    --><!--<alias alias="IMessageContext" type="IFramework.Message.IMessageContext, IFramework" ></alias>
+    <alias alias="MessageContext" type="IFramework.MessageQueue.ServiceBus.MessageFormat.MessageContext, IFramework.MessageQueue.ServiceBus" ></alias>--><!--
     <container>
-      <!--<register name="MessageStoreMapping" type="IMessageContext" mapTo="MessageContext">
+      --><!--<register name="MessageStoreMapping" type="IMessageContext" mapTo="MessageContext">
         <constructor>
           <param name="message" />
         </constructor>
-      </register>-->
+      </register>--><!--
       <register type="IMessageStore" mapTo="SampleModelContext">
         <lifetime type="hierarchical" />
       </register>
-      <!--<register name="perResolveMessageStore" type="IMessageStore" mapTo="SampleModelContext">
-      </register>-->
+      --><!--<register name="perResolveMessageStore" type="IMessageStore" mapTo="SampleModelContext">
+      </register>--><!--
       <register type="ILinearCommandManager" mapTo="LinearCommandManager">
         <lifetime type="singleton" />
       </register>
@@ -78,7 +78,7 @@
           <param name="needMessageStore" value="true" />
         </constructor>
       </register>
-      <!--<register type="ICommandBus" mapTo="DistributableCommandBus">
+      --><!--<register type="ICommandBus" mapTo="DistributableCommandBus">
         <lifetime type="singleton" />
         <constructor>
           <param name="handlerProvider" dependencyType="CommandHandlerProvider" />
@@ -87,7 +87,7 @@
           <param name="receiveEndPoint" value="inproc://commandBus" />
           <param name="inProc" value="true" />
         </constructor>
-      </register>-->
+      </register>--><!--
       <register type="IUnitOfWork" mapTo="UnitOfWork">
         <lifetime type="hierarchical" />
       </register>
@@ -146,16 +146,16 @@
           <param name="partition" value="0" />
         </constructor>
       </register>
-      <!--<instance name="serviceBusConnectionString" value="Endpoint=sb://dev.r-soft.cn/ServiceBusDefaultNamespace;StsEndpoint=https://dev.r-soft.cn:1552/ServiceBusDefaultNamespace;RuntimePort=1553;ManagementPort=1552;OAuthUsername=ivan;OAuthPassword=DevPassword01!" />-->
-      <!--<instance name="serviceBusConnectionString" value="Endpoint=sb://eco-rd-sb/eco-rd-test;StsEndpoint=https://eco-rd-sb:9355/eco-rd-test;RuntimePort=9354;ManagementPort=9355;OAuthUsername=sbadmin;OAuthPassword=Password01!" />
+      --><!--<instance name="serviceBusConnectionString" value="Endpoint=sb://dev.r-soft.cn/ServiceBusDefaultNamespace;StsEndpoint=https://dev.r-soft.cn:1552/ServiceBusDefaultNamespace;RuntimePort=1553;ManagementPort=1552;OAuthUsername=ivan;OAuthPassword=DevPassword01!" />--><!--
+      --><!--<instance name="serviceBusConnectionString" value="Endpoint=sb://eco-rd-sb/eco-rd-test;StsEndpoint=https://eco-rd-sb:9355/eco-rd-test;RuntimePort=9354;ManagementPort=9355;OAuthUsername=sbadmin;OAuthPassword=Password01!" />
       <register type="IMessageQueueClient" mapTo="ServiceBusClient">
         <constructor>
           <param name="serviceBusConnectionString" dependencyName="serviceBusConnectionString" />
         </constructor>
-      </register>-->
+      </register>--><!--
       <register type="IMessageQueueClient" mapTo="KafkaClient">
         <constructor>
-          <param name="zkConnectionString" value="192.168.99.60:2181" />
+          <param name="zkConnectionString" value="192.168.199.242:2181" />
         </constructor>
       </register>
       <register type="IMessagePublisher" mapTo="MessagePublisher">
@@ -175,7 +175,7 @@
         <lifetime type="hierarchical" />
       </register>
     </container>
-  </unity>
+  </unity>-->
   <appSettings>
     <!-- Service Bus specific app setings for messaging connections -->
     <add key="webpages:Version" value="2.0.0.0" />
