--- a/Src/iFramework/IFramework4.5.1.csproj
+++ b/Src/iFramework/IFramework4.5.1.csproj
@@ -61,16 +61,18 @@
     <Compile Include="Command\CommandBusExtension.cs" />
     <Compile Include="Command\ICommandAsyncHandler.cs" />
     <Compile Include="Event\IEventAsyncSubscriber.cs" />
+    <Compile Include="Infrastructure\Logging\MockLogger.cs" />
+    <Compile Include="Infrastructure\Logging\MockLoggerFactory.cs" />
     <Compile Include="IoC\IContainer.cs" />
     <Compile Include="IoC\Injection.cs" />
     <Compile Include="IoC\Lifetime.cs" />
     <Compile Include="IoC\Parameter.cs" />
     <Compile Include="MessageQueue\Configuration.cs" />
+    <Compile Include="MessageQueue\ISlidingDoor.cs" />
     <Compile Include="MessageQueue\MessageQueueFactory.cs" />
     <Compile Include="Message\IMessageAsyncHandler.cs" />
     <Compile Include="Message\Impl\HandlerTypeInfo.cs" />
-    <Compile Include="Message\Impl\SlidingDoor.cs" />
-    <Compile Include="Message\ISlidingDoor.cs" />
+    <Compile Include="MessageQueue\SlidingDoor.cs" />
     <Compile Include="Message\MessageResponse.cs" />
     <Compile Include="Command\ILinearCommandManager.cs" />
     <Compile Include="Command\Impl\CommandBus.cs">
