--- a/Src/Sample/Sample.CommandConsumer/App.config
+++ b/Src/Sample/Sample.CommandConsumer/App.config
@@ -20,8 +20,11 @@
     <!--<add name="MessageStore" providerName="System.Data.SqlClient" connectionString="Server=.\sqlexpress;Database=SampleMessageStore;Integrated Security=true;" />-->
   </connectionStrings>
   <startup>
-    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6"/>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.1"/>
   </startup>
+  <system.web>
+    <compilation debug="true" targetFramework="4.5.1" />
+  </system.web>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
       <parameters>
@@ -35,12 +38,16 @@
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
-        <assemblyIdentity name="log4net" blicKeyToken="1b44e1d426115821"/>
-        <codeBase version="1.2.10.0" href="log4netv1.2.10.0\log4net.dll"/>
+        <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-9.0.0.0" newVersion="9.0.0.0" />
       </dependentAssembly>
       <dependentAssembly>
-        <assemblyIdentity name="log4net" publicKeyToken="681549d62126b7b8" culture="neutral"/>
-        <bindingRedirect oldVersion="0.0.0.0-1.2.15.0" newVersion="1.2.15.0"/>
+        <assemblyIdentity name="log4net" publicKeyToken="681549d62126b7b8" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-1.2.15.0" newVersion="1.2.15.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="log4net" publicKeyToken="1b44e1d426115821" />
+        <codeBase version="1.2.10.0" href="log4netv1.2.10.0\log4net.dll" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
