--- a/Src/iFramework/IFramework4.5.1.csproj
+++ b/Src/iFramework/IFramework4.5.1.csproj
@@ -73,6 +73,7 @@
     <Compile Include="Message\IMessageAsyncHandler.cs" />
     <Compile Include="Message\Impl\HandlerTypeInfo.cs" />
     <Compile Include="MessageQueue\SlidingDoor.cs" />
+    <Compile Include="Message\Impl\MessageExtension.cs" />
     <Compile Include="Message\MessageResponse.cs" />
     <Compile Include="Command\ILinearCommandManager.cs" />
     <Compile Include="Command\Impl\CommandBus.cs">
