--- a/Src/iFramework.Plugins/EQueueBroker/EQueueBroker.csproj
+++ b/Src/iFramework.Plugins/EQueueBroker/EQueueBroker.csproj
@@ -4,14 +4,13 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{C52B89CF-D3A6-48FC-BA3B-0DAFF977FA6E}</ProjectGuid>
-    <OutputType>Library</OutputType>
+    <ProjectGuid>{E1EA3CB6-4AEF-4DC6-8FCE-7ECBCD2A54FF}</ProjectGuid>
+    <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>IFramework.MessageQueue.MSKafka</RootNamespace>
-    <AssemblyName>IFramework.MessageQueue.MSKafka</AssemblyName>
+    <RootNamespace>EQueueBroker</RootNamespace>
+    <AssemblyName>EQueueBroker</AssemblyName>
     <TargetFrameworkVersion>v4.5.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -30,13 +29,12 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <StartupObject />
+  </PropertyGroup>
   <ItemGroup>
-    <Reference Include="KafkaNET.Library, Version=1.0.47.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\..\packages\Microsoft.CSharpClient-for-Kafka.1.0.47\lib\net45\KafkaNET.Library.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="log4net, Version=1.2.15.0, Culture=neutral, PublicKeyToken=669e0ddf0bb1aa2a, processorArchitecture=MSIL">
-      <HintPath>..\..\packages\log4net.2.0.5\lib\net45-full\log4net.dll</HintPath>
+    <Reference Include="Autofac, Version=4.0.0.0, Culture=neutral, PublicKeyToken=17863af14b0044da, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\Autofac.4.0.0\lib\net451\Autofac.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="Newtonsoft.Json, Version=9.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
@@ -51,29 +49,24 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
-    <Reference Include="ZooKeeperNet, Version=3.4.6.1, Culture=neutral, PublicKeyToken=fefd2c046da35b56, processorArchitecture=MSIL">
-      <HintPath>..\..\packages\ZooKeeper.Net.3.4.6.2\lib\net40\ZooKeeperNet.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Config\FrameworkConfigurationExtension.cs" />
-    <Compile Include="KafkaClient.cs" />
-    <Compile Include="KafkaConsumer.cs" />
-    <Compile Include="MessageFormat\KafkaMessage.cs" />
-    <Compile Include="MessageFormat\MessageContext.cs" />
+    <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="QueueClient.cs" />
-    <Compile Include="TopicClient.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\iFramework\IFramework4.5.1.csproj">
-      <Project>{0b36292c-8849-441d-8fb8-a053d43a8e72}</Project>
+      <Project>{0B36292C-8849-441D-8FB8-A053D43A8E72}</Project>
       <Name>IFramework4.5.1</Name>
     </ProjectReference>
+    <ProjectReference Include="..\IFramework.MessageQueue.EQueue\IFramework.MessageQueue.EQueue.csproj">
+      <Project>{02129813-b7eb-4c7e-aeba-f7c5d40071f9}</Project>
+      <Name>IFramework.MessageQueue.EQueue</Name>
+    </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="App.config" />
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
