--- a/Src/iFramework.Plugins/EQueueTest/App.config
+++ b/Src/iFramework.Plugins/EQueueTest/App.config
@@ -1,11 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-  <startup>
-    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.1" />
-  </startup>
+    <startup> 
+        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.1" />
+    </startup>
   <runtime>
-    <gcServer enabled="true" />
-    <gcConcurrent enabled="true" />
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
         <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
@@ -19,19 +17,11 @@
         <assemblyIdentity name="log4net" publicKeyToken="669e0ddf0bb1aa2a" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-1.2.15.0" newVersion="1.2.15.0" />
       </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="log4net" publicKeyToken="669e0ddf0bb1aa2a" />
+        <codeBase version="1.2.13.0" href="log4netv1.2.13.0\log4net.dll" />
+        <bindingRedirect oldVersion="0.0.0.0-1.2.15.0" newVersion="1.2.15.0" />
+      </dependentAssembly>
     </assemblyBinding>
   </runtime>
-  <appSettings>
-    <add key="isMemoryMode" value="false" />
-    <add key="fileStoreRootPath" value="c:\equeue-store" />
-    <add key="chunkSize" value="256" />
-    <!--MB-->
-    <add key="chunkWriteBuffer" value="256" />
-    <!--KB-->
-    <add key="enableCache" value="true" />
-    <add key="flushInterval" value="100" />
-    <!--Milliseconds-->
-    <add key="chunkCacheMinPercent" value="40" />
-    <add key="messageWriteQueueThreshold" value="10000" />
-  </appSettings>
 </configuration>
