--- a/Src/iFramework.Plugins/EQueueBroker/App.config
+++ b/Src/iFramework.Plugins/EQueueBroker/App.config
@@ -23,7 +23,7 @@
   </runtime>
   <appSettings>
     <add key="isMemoryMode" value="false" />
-    <add key="fileStoreRootPath" value="c:\equeue-store" />
+    <add key="fileStoreRootPath" value="d:\equeue-store" />
     <add key="chunkSize" value="256" />
     <!--MB-->
     <add key="chunkWriteBuffer" value="256" />
