fix nohandled issue in eventsubscriber

--- a/Src/Sample/Sample.CommandService/Web.config
+++ b/Src/Sample/Sample.CommandService/Web.config
@@ -15,8 +15,7 @@
   <frameworkConfiguration>
     <handlers>
       <handler name="ApplicationEventSubscriber" sourceType="Assembly" source="Sample.ApplicationEventSubscriber" />
-      <handler name="DomainEventSubscriber" sourceType="Assembly" source="Sample.DomainEventSubscriber" />
-      <handler name="AsyncDomainEventSubscriber" sourceType="Assembly" source="Sample.AsyncDomainEventSubscriber" />
+      <handler name="DomainEventSubscriber" sourceType="Assembly" source="Sample.AsyncDomainEventSubscriber" />
       <handler name="CommandHandlers" sourceType="Assembly" source="Sample.CommandHandler" />
     </handlers>
   </frameworkConfiguration>
