--- a/Src/Sample/Sample.CommandServiceTests/App.config
+++ b/Src/Sample/Sample.CommandServiceTests/App.config
@@ -10,82 +10,12 @@
     <!--<add name="MessageStore" providerName="System.Data.SqlClient" connectionString="Server=.\sqlexpress;Database=SampleMessageStore;Integrated Security=true;" />-->
   </connectionStrings>
   <unity xmlns="http://schemas.microsoft.com/practices/2010/unity">
-    <alias alias="IMessageConsumer" type="IFramework.Message.IMessageConsumer, IFramework" />
-    <alias alias="EventSubscriber" type="IFramework.Event.Impl.EventSubscriber, IFramework" />
-    <alias alias="IMessagePublisher" type="IFramework.Message.IMessagePublisher, IFramework" />
-    <alias alias="MessagePublisher" type="IFramework.Message.Impl.MessagePublisher, IFramework" />
-    <alias alias="IMessageQueueClient" type="IFramework.MessageQueue.IMessageQueueClient, IFramework" />
-    <alias alias="ServiceBusClient" type="IFramework.MessageQueue.ServiceBus.ServiceBusClient, IFramework.MessageQueue.ServiceBus" />
-    <alias alias="KafkaClient" type="IFramework.MessageQueue.MSKafka.KafkaClient, IFramework.MessageQueue.MSKafka" />
-    <alias alias="ILinearCommandManager" type="IFramework.Command.ILinearCommandManager, IFramework" />
-    <alias alias="LinearCommandManager" type="Sample.Command.LinearCommandManager, Sample.Command" />
-    <alias alias="ICommandBus" type="IFramework.Command.ICommandBus, IFramework" />
-    <alias alias="CommandBus" type="IFramework.Command.Impl.CommandBus, IFramework" />
-    <alias alias="ICommandHandlerProvider" type="IFramework.Command.ICommandHandlerProvider, IFramework" />
-    <alias alias="CommandHandlerProvider" type="IFramework.Command.Impl.CommandHandlerProvider, IFramework" />
-    <alias alias="IHandlerProvider" type="IFramework.Message.IHandlerProvider, IFramework" />
-    <alias alias="IEventSubscriberProvider" type="IFramework.Event.IEventSubscriberProvider, IFramework" />
-    <alias alias="EventSubscriberProvider" type="IFramework.Event.Impl.EventSubscriberProvider, IFramework" />
-    <alias alias="IUnitOfWork" type="IFramework.UnitOfWork.IUnitOfWork, IFramework" />
-    <alias alias="UnitOfWork" type="IFramework.EntityFramework.UnitOfWork, IFramework.EntityFramework" />
-    <alias alias="IEventBus" type="IFramework.Event.IEventBus, IFramework" />
-    <alias alias="EventBus" type="IFramework.Event.Impl.EventBus, IFramework" />
-    <alias alias="IMessageStore" type="IFramework.Message.IMessageStore, IFramework" />
-    <alias alias="MessageStore" type="IFramework.MessageStoring.MessageStore, IFramework.MessageStoring.EntityFramework" />
-    <alias alias="SampleModelContext" type="Sample.Persistence.SampleModelContext, Sample.Persistence" />
-    <alias alias="RepositoryImpl" type="IFramework.EntityFramework.Repositories.Repository`1,  IFramework.EntityFramework" />
-    <!--<alias alias="IMessageContext" type="IFramework.Message.IMessageContext, IFramework" ></alias>
-    <alias alias="MessageContext" type="IFramework.MessageQueue.ServiceBus.MessageFormat.MessageContext, IFramework.MessageQueue.ServiceBus" ></alias>-->
     <container>
-      <register type="IUnitOfWork" mapTo="UnitOfWork">
-        <lifetime type="hierarchical" />
-      </register>
-      <register type="IFramework.Repositories.IDomainRepository, IFramework" mapTo="IFramework.EntityFramework.Repositories.DomainRepository, IFramework.EntityFramework" />
-      <register type="IFramework.Repositories.IRepository`1, IFramework" mapTo="RepositoryImpl" />
-      <register type="SampleModelContext" mapTo="SampleModelContext">
-        <lifetime type="hierarchical" />
-      </register>
-      <register type="ILinearCommandManager" mapTo="LinearCommandManager">
-        <lifetime type="singleton" />
-      </register>
-      <register type="ICommandBus" mapTo="CommandBus">
-        <lifetime type="singleton" />
-        <constructor>
-          <param name="messageQueueClient" dependencyType="IMessageQueueClient"></param>
-          <param name="linearCommandManager" dependencyType="LinearCommandManager" />
-          <param name="replyTopicName" value="replyTopicTest" />
-          <param name="replySubscriptionName" value="replySubscription" />
-          <param name="needMessageStore" value="false"></param>
-        </constructor>
-      </register>
-      <register type="IEventSubscriberProvider" mapTo="EventSubscriberProvider">
-        <lifetime type="singleton" />
-        <constructor>
-          <param name="assemblies">
-            <array>
-              <value value="DomainEventSubscriber" />
-            </array>
-          </param>
-        </constructor>
-      </register>
-      <register type="IEventBus" mapTo="EventBus">
-        <lifetime type="hierarchical" />
-      </register>
-      <instance name="serviceBusConnectionString" value="Endpoint=sb://dev.r-soft.cn/ServiceBusDefaultNamespace;StsEndpoint=https://dev.r-soft.cn:1552/ServiceBusDefaultNamespace;RuntimePort=1553;ManagementPort=1552;OAuthUsername=ivan;OAuthPassword=DevPassword01!" />
-      <!--<instance name="serviceBusConnectionString" value="Endpoint=sb://iframework.servicebus.chinacloudapi.cn/;StsEndpoint=https://iframework-sb.accesscontrol.chinacloudapi.cn/;SharedSecretIssuer=owner;SharedSecretValue=DfDIfwLDgVK4Ujx0iDmuUAFxYIkX+iFSnQFqw5BtpSw=" />-->
-      <!--<register type="IMessageQueueClient" mapTo="ServiceBusClient">
-        <constructor>
-          <param name="serviceBusConnectionString" dependencyName="serviceBusConnectionString" />
-        </constructor>
-      </register> -->
-      <register type="IMessageQueueClient" mapTo="KafkaClient">
-        <constructor>
-          <param name="zkConnectionString" value="192.168.199.242:2181" />
-        </constructor>
-      </register>
     </container>
   </unity>
-
+  <system.web>
+    <compilation debug="true" />
+  </system.web>
   <runtime>
 
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
