--- a/Src/iFramework.Plugins/MSKafka.Test/MSKafka.Test.csproj
+++ b/Src/iFramework.Plugins/MSKafka.Test/MSKafka.Test.csproj
@@ -57,6 +57,7 @@
       <HintPath>..\..\packages\Unity.4.0.1\lib\net45\Microsoft.Practices.Unity.RegistrationByConvention.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="Microsoft.VisualStudio.QualityTools.UnitTestFramework, Version=10.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -73,6 +74,7 @@
   <ItemGroup>
     <Compile Include="Command.cs" />
     <Compile Include="DomainEvent.cs" />
+    <Compile Include="KafkaClientTests.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -120,6 +122,9 @@
       <Project>{57f61e21-4d31-4ce0-9dfb-7be6a113654a}</Project>
       <Name>IFramework.Unity</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Service Include="{82A7F48D-3B50-4B1E-B82E-3ADA8210C358}" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
